--- a/lj/src/main/resources/application.properties
+++ b/lj/src/main/resources/application.properties
@@ -9,3 +9,6 @@ qiniu.accessKey=NFZWipkIy4PA9YjJHMCd60BG96r0MuwoWRqKIbyZ
 qiniu.secretKey=gjGeHYedC_fxR6FyOAzfkaFjHcFoSJNVlBr_m8S4
 qiniu.bucket=lijunqaq
 qiniu.path=http://pon8smknt.bkt.clouddn.com/
+
+
+jq.path=https://beta-phlinside.yiboshi.com
