--- a/lj/pom.xml
+++ b/lj/pom.xml
@@ -268,7 +268,7 @@
             </plugin>
 
         </plugins>
-        <finalName>li-admin</finalName>
+        <finalName>lj-admin</finalName>
     </build>
 
 
