--- a/lj/pom.xml
+++ b/lj/pom.xml
@@ -117,10 +117,10 @@
             <version>2.6.1</version>
         </dependency>
 
-        <!--mybatis-->
+        <!--mapper-->
         <!--<dependency>-->
-            <!--<groupId>org.mybatis.spring.boot</groupId>-->
-            <!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
+            <!--<groupId>org.mapper.spring.boot</groupId>-->
+            <!--<artifactId>mapper-spring-boot-starter</artifactId>-->
             <!--<version>1.3.1</version>-->
         <!--</dependency>-->
         <dependency>
