--- a/lj/src/main/resources/application-dev.yml
+++ b/lj/src/main/resources/application-dev.yml
@@ -52,4 +52,5 @@ mybatis-plus:
     banner: false
     db-config:
       id-type: auto
-  mapper-locations: classpath*:mapper/*.xml
+  mapper-locations: classpath:/mapper/*Mapper.xml
+
