--- a/lj/src/main/resources/application-druid.yml
+++ b/lj/src/main/resources/application-druid.yml
@@ -41,4 +41,5 @@ mybatis-plus:
     banner: false
     db-config:
       id-type: auto
-  mapper-locations: classpath*:mapper/*.xml
+  mapper-locations: classpath:/mapper/*/*Mapper.xml
+  typeAliasesPackage: com.yizhu.lj.dao.entity.*.entity
