--- a/lj/pom.xml
+++ b/lj/pom.xml
@@ -243,6 +243,13 @@
             <version>2.0</version>
         </dependency>
 
+        <!--日期组件-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.1.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
