--- a/lj/src/main/resources/application.properties
+++ b/lj/src/main/resources/application.properties
@@ -13,5 +13,8 @@ qiniu.path=http://pon8smknt.bkt.clouddn.com/
 
 jq.path=https://beta-phlinside.yiboshi.com
 
+oss.accessKeyId=LTAI4Fp4pVhTsYz9KbqYMmBi
+oss.accessKeySecret=g3IwZ7YptzOKy566Cea0R0d1Hv08Mx
+
 
 
