--- a/lj/pom.xml
+++ b/lj/pom.xml
@@ -57,7 +57,7 @@
             <artifactId>spring-retry</artifactId>
         </dependency>
         <!--springcloud-->
-       <!--<dependency>-->
+        <!--<dependency>-->
         <!--<groupId>org.springframework.cloud</groupId>-->
         <!--<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>-->
         <!--</dependency>-->
@@ -73,11 +73,11 @@
         </dependency>
 
 
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
-            <version>1.4.4.RELEASE</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-eureka</artifactId>-->
+            <!--<version>1.4.4.RELEASE</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-ribbon</artifactId>
@@ -119,9 +119,9 @@
 
         <!--mapper-->
         <!--<dependency>-->
-            <!--<groupId>org.mapper.spring.boot</groupId>-->
-            <!--<artifactId>mapper-spring-boot-starter</artifactId>-->
-            <!--<version>1.3.1</version>-->
+        <!--<groupId>org.mapper.spring.boot</groupId>-->
+        <!--<artifactId>mapper-spring-boot-starter</artifactId>-->
+        <!--<version>1.3.1</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -155,11 +155,15 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.3</version>
         </dependency>
+        <!--阿里云短信-->
+
         <dependency>
-            <groupId>com.aliyun</groupId>
-            <artifactId>aliyun-java-sdk-core</artifactId>
-            <version>4.0.2</version>
+        <groupId>com.aliyun</groupId>
+        <artifactId>aliyun-java-sdk-core</artifactId>
+        <version>4.0.2</version>
         </dependency>
+
+
         <!-- 七牛云 -->
         <dependency>
             <groupId>com.qiniu</groupId>
@@ -249,6 +253,20 @@
             <artifactId>hutool-all</artifactId>
             <version>5.1.5</version>
         </dependency>
+
+        <!--邮箱-->
+
+        <!--<dependency>-->
+            <!--<groupId>com.aliyun</groupId>-->
+            <!--<artifactId>aliyun-java-sdk-core</artifactId>-->
+            <!--<version>3.0.0</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-dm</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
 
     </dependencies>
 
