--- a/lj/src/main/resources/application-dev.yml
+++ b/lj/src/main/resources/application-dev.yml
@@ -13,9 +13,9 @@ spring:
   datasource:
     userdb:
      driver-class-name: com.mysql.jdbc.Driver
-     url: jdbc:mysql://localhost:3306/lj?useUnicode=true&characterEncoding=utf8
+     url: jdbc:mysql://lijunqaq.top:3306/wuliuqi?useUnicode=true&characterEncoding=utf8
      username: root
-     password: 123456
+     password: Lijunqaq_567!
      type: com.alibaba.druid.pool.DruidDataSource
      # 初始连接数
      initialSize: 5
