--- a/lj/src/main/resources/application.properties
+++ b/lj/src/main/resources/application.properties
@@ -18,3 +18,25 @@ oss.accessKeySecret=g3IwZ7YptzOKy566Cea0R0d1Hv08Mx
 
 
 
+#服务器
+mailHost=smtp.qq.com
+#端口号
+mailPort=25
+#邮箱账号
+mailUsername=1077387582@qq.com
+#发件人
+#邮箱授权码
+mailPassword=ijmktaeqvdlwhgae
+#时间延迟
+mailTimeout=25000
+#发送人
+mailFrom=1077387582@qq.com
+#发件人
+personal=伍六七
+#主题
+subject=早上好
+#内容模板
+html=您的邮箱验证码为：1688
+
+
+
